# HPC101

./: 404.html  Makefile  TODO.md  index.html  mkdocs.yml  pyproject.toml  search.json  sitemap.xml  zensical.toml
.cache/plugin/git-committers/: page-authors.json
.github/workflows/: ci.yml
Intro/: index.html
Lab0-LinuxCrashCourse/: index.html
Lab1-MiniCluster/: index.html
Lab2-Vectors/: index.html
Lab2.5-Vectors-Bonus/: index.html
Lab3-Cuda/: index.html
Lab4-Solver-Challenge/: index.html
Lab4-Solver-Challenge/baseline/: index.html
Lab5-DL/: index.html
Project-Pivot/: index.html
beamer/: Makefile  day8_pm.md  day8_pm.tex
beamer/day8_pm/sections/: 1_introduction.tex  2_cpp_intro.tex  3_thread.tex  3_thread_overview.tex  4_synchronization.tex  5_condition_variable.tex  5_producer_consumer.tex  6_parallel_algorithm.tex  7_summary.tex  cpp_intro.tex  introduction.tex  parallel_overview.tex  producer_consumer.tex  summary.tex  synchronization.tex
docs/: changelog.md  cluster.md  enroll.md  index.md  sponsors.md
docs/Intro/: index.md
docs/Lab0-LinuxCrashCourse/: index.md
docs/Lab1-MiniCluster/: clone.json  index.md  link.json
docs/Lab2-Vectors/: index.md
docs/Lab2.5-Vectors-Bonus/: index.md  multi.cpp
docs/Lab4-Solver-Challenge/: index.md
docs/Lab4-Solver-Challenge/baseline/: README.md
docs/Lab5-DL/: example.py  index.md  init.py  process.py
docs/guide/: index.md  job.md  oj.md  overview.md  submit.md
docs/javascripts/: mermaid-init.js  v86-init.js
docs/lab/Lab0-LinuxCrashCourse/: index.md
docs/lab/Lab1-MiniCluster/: index.md
docs/lab/Lab2-Vectorization/: index.md
docs/lab/Lab2.5-RISC-V/: index.md
docs/lab/Lab3-GDN-Prefill/: index.md
docs/lab/Lab4-AMSS-NCKU/: index.md
docs/lab/Lab4-Solver-Challenge/: index.md
docs/lab/Lab5-Gemma4/: index.md
docs/lab/Lab5-TinyLLM/: index.md
docs/stylesheets/: theme.css
enroll/: index.html
extensions/: git_info.py
guide/: index.html
guide/env/: index.html
guide/job/: index.html
guide/oj/: index.html
guide/overview/: index.html
guide/submit/: index.html
index.assets/statistics/: submission.py
lab/Final-Project/: index.html
lab/Lab0-LinuxCrashCourse/: index.html
lab/Lab1-MiniCluster/: index.html
lab/Lab2-Vectorization/: index.html
lab/Lab2-Vectors/: index.html
lab/Lab2.5-RISC-V/: index.html
lab/Lab2.5-Vectors-Bonus/: index.html
lab/Lab3-Cuda/: index.html
lab/Lab3-CudaConv/: index.html
lab/Lab3-GDN-Prefill/: index.html
lab/Lab4-AMSS-NCKU/: index.html
lab/Lab4-Solver-Challenge/: index.html
lab/Lab4-Solver-Challenge/code/: index.html
lab/Lab5-DL/: index.html
lab/Lab5-Gemma4/: index.html
lab/Lab5-TinyLLM/: index.html
lab/Project-Pivot/: index.html
overrides/: main.html
overrides/partials/: logo.html  source-file.html
search/: search_index.json
slides/: index.html  test.html
sponsors/: index.html
src/lab2/: CMakeLists.txt  bonus.cpp  main.cpp
src/lab2/include/: lora.h  moe.h
src/lab2/src/: data.cpp  gradcheck.cpp  lora_ref.cpp  moe_ref.cpp
src/lab2/student/: lora_opt.cpp  moe_opt.cpp
src/lab3/: README.md  run.py
src/lab3/evaluation/: cases.csv  run.py  support.py
src/lab3/preprocessing/: tilelang_cumsum.py  tilelang_kkt_solve.py
src/lab3/references/: torch_gdr.py
src/lab3/references/official/: fla.py  flash_qla.py  flashinfer.py
src/lab3/student/: tilelang_fwd.py
src/lab4/: .gitignore  AMSS_NCKU_Input.py  AMSS_NCKU_Program.py  CMakeLists.txt  README.md  check.sh  compile.sh  makefile_and_run.py  numerical_grid.py  run.sh  setup.py
src/lab4/scripts/: check_result.py  generate_TwoPuncture_input.py  makefile_and_run.py  numerical_grid.py  plot_GW_strain_amplitude_xiaoqu.py  plot_xiaoqu.py  renew_puncture_parameter.py
src/lab4/src/: ABE.C  Ansorg.C  Ansorg.h  Block.C  Block.h  MPatch.C  MPatch.h  MPatch_gpu.cu  MyList.h  Parallel.C  Parallel.h  Parallel_GPU.cpp  TwoPunctures.C  bssn_class.C  bssn_class.h  bssn_gpu_class.C  bssn_gpu_class.h  bssn_macro.h  bssn_rhs.f90  bssn_rhs.h  bssn_rhs_gpu.cu  bssn_step_gpu.C  cgh.C  cgh.h  checkpoint.C  checkpoint.h  derivatives.h  diff_new.f90  diff_new_gpu.cu  enforce_algebra.f90  enforce_algebra.h  enforce_algebra_gpu.cu  fadmquantites_bssn.f90  fadmquantites_bssn.h  fadmquantites_bssn_gpu.cu  fmisc.f90  fmisc.h  fmisc_gpu.cu  getnp4.f90  getnp4.h  (+38 more)
src/lab5/: README.md  config.yaml  pyproject.toml
src/lab5/datasets/: calibration-256.jsonl  performance_public.jsonl  performance_small.jsonl  quality_public.jsonl
src/lab5/results/: bf16-public-quality.json  gptq-public.json
src/lab5/scripts/: evaluate_quality.py  quantize.py  run_generation_queue.py
src/lab5/src/hpc101_infer/: __init__.py  config.py  engine.py  runner.py  sampling.py  types.py
src/lab5/src/hpc101_infer/data/: __init__.py  jsonl.py  tokenization.py
src/lab5/src/hpc101_infer/evaluation/: __init__.py  quality.py
src/lab5/src/hpc101_infer/layers/: attention.py  linear.py  norm.py  rotary.py
src/lab5/src/hpc101_infer/models/: config.py  gemma4.py  loader.py
src/lab5/src/hpc101_infer/quantization/: __init__.py  calibration.py  checkpoint.py  cli.py  config.py  packing.py  pipeline.py  registry.py  types.py
src/lab5/src/hpc101_infer/quantization/methods/: __init__.py  base.py  gptq.py  rtn.py
src/lab5/src/hpc101_infer/quantization/recipes/: __init__.py  gemma4.py
src/lab5/src/hpc101_infer/runtime/: __init__.py  batch.py  device.py  kv_cache.py  metrics.py
src/lab5/src/hpc101_infer/scheduler/: __init__.py  base.py  static_batch.py
stylesheets/: theme.css
