[project]
name = "hpc101"
version = "0.1.0"
description = "HPC101 course website powered by Zensical"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["extensions"]

[dependency-groups]
dev = [
    "zensical",
    "mkdocs-git-committers-plugin-2",
    "mkdocs-git-revision-date-localized-plugin",
    "neoteroi-mkdocs",
    "mkslides",
]
