[project]
name = "lab5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tilelang>=0.1.12",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "tqdm>=4.68.4",
    "transformers>=5.13.0",
    "triton>=3.7.1",
]

[project.scripts]
hpc101-difftest = "hpc101_infer.difftest:main"
hpc101-quantize = "hpc101_infer.quantization.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/hpc101_infer"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
